# FOAAD

./: .gitignore  README.md  globals.css  index.html  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
dashboard/: index.html
dashboard/src/: styles.css
planning/: index.html
planning/src/: main.ts  styles.css
settings/: index.html
settings/src/: main.ts  styles.css
src/: main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
